Restructure homepage layout: Add new sections (Features, Languages/Frameworks, Contact Marketing, Hire Requirement, FAQ) and reorganize page structure

--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
-    "aos": "^2.3.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-countup": "^6.5.0",
+    "react-router-dom": "^6.20.0",
+    "typeit": "^8.8.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "vite": "^5.0.8"
   },
   "scripts": {
     "dev": "vite",
@@ -25,4 +27,3 @@
     "strapi": "cd backend && npm run develop"
   }
 }
-
