--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-countup": "^6.5.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.20.0",
     "typeit": "^8.8.7"
   },
