Add Vercel Edge Middleware to serve page-specific meta tags for social crawlers

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,11 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/og.js": {
+      "runtime": "edge"
+    }
+  }
 }
 
