--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-prerender-plugin": "^0.5.12"
   },
   "scripts": {
     "dev": "vite",
