--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.20.0",
+    "remark-gfm": "^4.0.1",
     "typeit": "^8.8.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
