--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
+    "marked": "^15.0.12",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
